Harden parser and noise tests